# Shadertoy-Desktop

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: appimage.cmake  deps.cmake  packaging.cmake
src/: main.cpp
src/app/: ping_pong_resource.hpp  viewport.cpp  viewport.hpp
src/rml/: render_daxa.cpp
src/ui/: app_ui.cpp  app_ui.hpp  app_window.cpp  app_window.hpp  layout.hpp  main.rcss  main.rml  ui_icons.cpp  ui_icons.hpp  ui_theme.hpp
src/ui/components/: buffer_panel.cpp  buffer_panel.hpp  buffer_panel.rcss  buffer_panel.rml  buffer_tab.rml  buffer_tab_image.rml
